[project]
name = "skylark-ai-agent"
version = "0.1.0"
description = "Skylark Drone Operations Coordinator"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "gspread>=6.2.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.2.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
